chore(deploy): fix docker production setup and frontend build
- Dockerfile: Adicionado 'dos2unix' para corrigir quebras de linha (CRLF) no entrypoint.sh.
- Dockerfile: Ajustada variável API_URL para vazio para permitir caminhos relativos.
- nginx.conf: Alterada porta interna para 80 e aumentado buffer de headers para evitar erros de Cookie.
- web/build.ts: Implementada compilação manual do Tailwind CSS v4 via CLI.
- web/build.ts: Corrigida injeção de CSS no HTML e lógica de fallback da API_URL.
- web/index.html: Removida importação manual de CSS dev para evitar erros de MIME type.
- .env: Ajustados hosts do Postgres/Redis para usar Service Discovery do Docker em vez de localhost.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -41,7 +41,7 @@ ARG SENTRY_DSN
 
 ENV NODE_ENV=production
 ENV CLERK_PUBLISHABLE_KEY=$CLERK_PUBLISHABLE_KEY
-ENV API_URL=$API_URL
+ENV API_URL=
 ENV SENTRY_DSN=$SENTRY_DSN
 
 # Executar o build
