--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     ports:
       - "${APP_PORT:-90}:80"
     environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-anna}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB:-anna}
-      - REDIS_URL=redis://redis:6379
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-anna}:${POSTGRES_PASSWORD}@postgres-anna:5432/${POSTGRES_DB:-anna}
+      - REDIS_URL=redis://redis-anna:6379
       - CLERK_SECRET_KEY=${CLERK_SECRET_KEY}
       - CLERK_PUBLISHABLE_KEY=${CLERK_PUBLISHABLE_KEY}
       - CLERK_WEBHOOK_SECRET=${CLERK_WEBHOOK_SECRET:-}
@@ -36,7 +36,7 @@ services:
       start_period: 60s
       retries: 3
 
-  postgres-anna:
+  postgres:
     image: postgres:17-alpine
     environment:
       - POSTGRES_USER=${POSTGRES_USER:-anna}
