--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       start_period: 60s
       retries: 3
 
-  postgres:
+  postgres-anna:
     image: postgres:17-alpine
     environment:
       - POSTGRES_USER=${POSTGRES_USER:-anna}
